--- a/web-app/src/components/Body/styles.scss
+++ b/web-app/src/components/Body/styles.scss
@@ -5,6 +5,10 @@ main {
   max-height: 100vh;
   margin: 120px auto 0;
   padding: 0 12px;
+
+  @media screen and (max-width: 576px) {
+    margin: 96px auto 0;
+  }
 }
 
 .timers-box {
